--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>My First HTML Page</title>
-    </head>
-    <body>
-        <h1>Hello, World!</h1>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About me</title>
+</head>
+<body>
+    <h1>This is personal page</h1>
+    <img src="Me_thailand.jpg" alt="this is a picture of me">
+    <h2>Table of content</h2>
+    <ol>
+       <li>General info</li>
+       <li>hobby</li>
+       <li>skills</li>
+       <li>my contact infomation</li>
+    </ol>
+<h3>General info</h3>
+<p>My name is Trần Minh Huy</p>
+<dd>or you can just call me Danniel</dd>
+<p>Im 16 years old and I live in VietNam</p>
+<h3>hobby</h3>
+<p>I like to ride bike around HCM city</p>
+<h3>Skills</h3>
+<p>Im good at fixing stuff</p>
+<h3>Contact</h3>
+<p>you can message me via my email: Huydanniel2021@gmail.com</p> 
+<nbsp></nbsp>
+<p>or through <a href="https://www.facebook.com/profile.php?id=100047333693949">Facebook</a> </p>
+<hr>
+<p>Wanna send me a message right now, fill out the form below</p>
+<form action=""></form>
+<label for="Name">SOS MESSAGING</label>
+</body>
 </html>
