--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    
     <header>
         <a href="index.html" id="TheBrand">
             <img id="Logo_Image" src="Image\Meubel House_Logos-05.png" alt="Furniro icon">
@@ -28,6 +29,7 @@
            </ul>
         </nav>
     </header>
+
     <main>
         <!--Section1-->
         <section id="Section1">
@@ -52,7 +54,7 @@
         <section>
             <h2>Our product</h2>
             <div class="Product Selection Area">
-                <div class="row" id="row1">
+                <div class="Column_1 Row_1" id="R1C1">
                     <div class="ProductContainer">
                     <img src="Image/image 1.png" alt="Syltherine">
                     <span><p>-30%</p></span>
@@ -66,6 +68,7 @@
             <button>Show more</button>
         </section>
     </main>
+
     <footer>
         <div id="Brand:Location">
             <h2 id="Brand_Name_footer">Furniro</h2>
@@ -89,7 +92,6 @@
                     <li><a href="" class="nav_link_footer">Privacy Policy</a></li>
                 </ul>
             </div>
-            
 
             <form action="  ">
                 <label for="" id="footer_form_title">Newsletter</label>
