--- a/Blog_AboutUS.html
+++ b/Blog_AboutUS.html
@@ -29,7 +29,62 @@
         </nav>
     </header>
     <main>
-
+        <section id="Page_Route">
+            <img id="Page_Route_Logo_Display" src="Image\Meubel House_Logos-05.png" alt="Furniro icon">
+            <h2 id="Current_page">Blog</h2>
+            <a href="index.html" id="Start_point">Home</a>
+            <span id="Direction_Icon"> > </span>
+            <span id="Current_point">Blog</span>
+        </section>
+        <Article id="Article_1" class="Article_Form">
+            <span id="Article_1_Immage" class="Article_Immage">Image of the first article</span>
+             <ul id="Article_1_sorting_tag">
+                <li><p class=Article_sorting_tag_Author>Admin</p></li>
+                <li><p class="Article_sorting_tag_Date">14 Oct 2022</p>></picture></li>
+                <li><p  class="Article_sorting_type">Wood</p></li>
+             </ul>
+            <ul id="Article_1_sorting_Icon">
+                <li><span Class="Article_sorting_icon_a_Person"> A person icon</span></li>
+                <li><span class="Article_sorting_icon_a_Calendar">A calendar icon</span></li>
+                <li><span class="Article_sorting_icon_a_tag">A tag icon</span></li>
+            </ul>
+            <h3 id="Article_1_Header" class="Article_header">Going all-in with millennial design</h3>
+            <p id="Article_1_content" class="Article_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mus mauris vitae ultricies leo integer malesuada nunc. In nulla posuere sollicitudin aliquam ultrices. Morbi blandit cursus risus at ultrices mi tempus imperdiet. Libero enim sed faucibus turpis in. Cursus mattis molestie a iaculis at erat. Nibh cras pulvinar mattis nunc sed blandit libero. Pellentesque elit ullamcorper dignissim cras tincidunt. Pharetra et ultrices neque ornare aenean euismod elementum.</p>
+            <span class="Aticle_Read_More_button"> Read More</span>
+        </Article>
+        <section id="Page_number">
+            <ol>
+                <li><button id="Page_number_1_button"> page 1</button></li>
+                <li><button id="Page_number_2_button"> page 2</button></li>
+                <li><button id="Page_number_3_button"> page 3</button></li>
+                <li><button id="Next_page_button"> next</button></li>
+            </ol>
+        </section> 
+        <Aside id="Article_nav_bar">
+            <form id="Search_bar" action="">
+                <input type="text">
+                <span id="Search_bar_search_icon">Search icon</span>
+                <label for="" id="Category_Header">Categories</label>
+                <label for="Category_crafts">Crafts</label>
+                <label for="Category_design">Design</label>
+                <label for="Category_handmade">Handmade</label>
+                <label for="Category_interior">interior</label>
+                <label for="Category_wood">Wood</label>
+                <select name="Category_crafts" id="Category_crafts" class="Category"></select>
+                <select name="Category_design" id="Category_desgin" class="Category"></select>
+                <select name="Category_handmade" id="Category_handmade" class="Category"></select>
+                <select name="Category_interior" id="Category_interior" class="Category"></select>
+                <select name="Category_wood" id="Category_wood" class="Category"></select>
+            </form>
+            <div id="Recent_post_option">
+                <h4 id="Recent_post_option_header">Recent Posts</h4>
+                <div id="Recent_post_1" class="Post_frame">
+                    <span id="Recent_post_1_iamge" class="Recent_post_image_frame">Article 1 image</span>
+                    <h5 id="Recent_post_1_header" class="Recent_post_header">Going all-in with millennial design</h5>
+                    <p id="Recent_post_1_date" class="Recent_post_date">03 Aug 2022</p>
+                </div>
+            </div>
+        </Aside>
     </main>
     <footer>
         <div id="Brand:Location">
