tiny change in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href=""><span id="Alerted_Person_Icon" class="SNav_Symbol">Alerted Person</span></a></li>
             <li><a href=""><span id="Search_Icon" class="SNav_Symbol">Search</span></a></li>
             <li><a href=""><span id="Heart_Icon" class="SNav_Symbol_Icon">Favorite</span></a></li>
-            <li><a href=""><span id="Shopping_Cart_Icon" class="SNav_Symbol">Shopping Cart/span></a></li>
+            <li><a href=""><span id="Shopping_Cart_Icon" class="SNav_Symbol">Shopping Cart</span></a></li>
            </ul>
         </nav>
     </header>
